# okflow

./: CLAUDE.md  LICENSE  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-15-scope-implementation.md
docs/superpowers/specs/: 2026-03-15-scope-design.md  2026-03-15-usage-doc-and-example-design.md
document/: dag-engine-design.md  usage.md
example/: main.py  workflow.json
src/okflow/: __init__.py  context.py  exceptions.py  executor.py  registry.py  scope.py
src/okflow/nodes/: __init__.py  action.py  base.py  condition.py  foreach.py  while_.py
src/okflow/schema/: __init__.py  nodes.py  validators.py  workflow.py
tests/: test_context.py  test_exceptions.py  test_executor.py  test_integration.py  test_registry.py  test_schema.py  test_scope.py  test_validators.py
tests/test_nodes/: test_action.py  test_condition.py  test_foreach.py  test_while.py
